
20160330T2132Z <gchicares@sbcglobal.net> [454]

  docmdichildframe_ex.cpp
  docmdichildframe_ex.hpp
Remove unneeded dtor (VZ).

20160330T2135Z <gchicares@sbcglobal.net> [454]

  docmdichildframe_ex.cpp
  docmdichildframe_ex.hpp
Remove unneeded statusbar workarounds (VZ).

20160330T2141Z <gchicares@sbcglobal.net> [454]

  Makefile.am
  docmdichildframe_ex.cpp [expunged]
  docmdichildframe_ex.hpp [expunged]
  objects.make
  skeleton.cpp
Expunge a module that no longer does anything. See:
  http://lists.nongnu.org/archive/html/lmi/2016-03/msg00054.html
  http://lists.nongnu.org/archive/html/lmi/2014-11/msg00062.html

20160330T2222Z <gchicares@sbcglobal.net> [454]

  test_coding_rules.cpp
Allow long lines with 'https:' as well as 'http:'.

20160330T2224Z <gchicares@sbcglobal.net> [454]

  skeleton.cpp
Avoid crashing due to indiscriminate event handling (VZ). See:
  https://github.com/vadz/lmi/commit/6355bb270241826fa32e151eb197a4b1f5cd5c12.patch
  http://lists.nongnu.org/archive/html/lmi/2014-11/msg00062.html

20160330T2344Z <gchicares@sbcglobal.net> [454]

  skeleton.cpp
Don't count all children just to see if there are more than one (VZ).

20160331T0956Z <gchicares@sbcglobal.net> [454]

  skeleton.cpp
Remove a superfluous cast (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-03/msg00057.html

20160407T2310Z <gchicares@sbcglobal.net> [453]

  census_view.cpp
  census_view.hpp
  database_view.cpp
  database_view.hpp
  gpt_view.cpp
  gpt_view.hpp
  illustration_view.cpp
  illustration_view.hpp
  mec_view.cpp
  mec_view.hpp
  policy_view.cpp
  policy_view.hpp
  rounding_view.cpp
  rounding_view.hpp
  text_view.hpp
  text_view.cpp
  tier_view.cpp
  tier_view.hpp
  view_ex.cpp
  view_ex.hpp
Refactor, eliminating public virtuals.

20160408T0125Z <gchicares@sbcglobal.net> [451]

  gpt_view.cpp
  illustration_view.cpp
  mec_view.cpp
  view_ex.cpp
  view_ex.hpp
Refactor, eliminating protected virtuals.
